2010-08-09  Sam Steingold  <sds@gnu.org>

	* condition.lisp (clos-style-warning, clos-novice-warning)
	(class-obsolescence-warning): add
	(gf-already-called-warning, gf-replacing-method-warning): inherit
	from CLOS-STYLE-WARNING, not CLOS-WARNING
	* init.lisp, clos-package.lisp (clos-style-warning)
	(clos-novice-warning, class-obsolescence-warning): export
	* clos-class3.lisp (defclass):
	the novice warning is now of type CLOS-NOVICE-WARNING;
	drop the weird non-standard :DEFAULT-INITARGS cleanup and warning
	(make-instances-obsolete-<semi-standard-class>-nonrecursive):
	obsolescence warnings are now of type CLASS-OBSOLESCENCE-WARNING
	* clos-genfun2b.lisp (std-add-method): do not use
	WARN-IF-GF-ALREADY-CALLED, mention the method in the warnings message
	(std-remove-method): do not use GF-ALREADY-CALLED-WARNING,
	one warning instead of two
	(gf-already-called-warning, warn-if-gf-already-called): remove
	* clos-genfun3.lisp (ensure-generic-function-using-class-<t>):
	do not call WARN-IF-GF-ALREADY-CALLED

2010-08-09  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-DEFUN): when redefining a functions with the
	same signature, issue a STYLE-WARNING, not a WARNING

2010-08-09  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-source-location): fix the messages,
	messed-up by the 2009-10-28 patch

2010-08-06  Sam Steingold  <sds@gnu.org>

	fix bug#3040648: documentation strings broken for structs
	* clos-class3.lisp (shared-initialize-<structure-class>): do not
	ignore the documentation argument, set the documentation slot instead
	(define-structure-class): accept documentation (ABI change)
	* constobj.d (version): bump because of that!
	* defstruct.lisp (defstruct): pass docstring to define-structure-class
	* documentation.lisp ((setf documentation)@class&structure):
	go through (setf documentation), not sys::%set-documentation

2010-08-06  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	* makemake.in (cygwin_finish): use sophisticated grep string to