@@ -1,3 +1,7 @@
+2010-08-13  Sam Steingold  <sds@gnu.org>
+
+	* type.lisp (typep-number-test, c-typep-number): reuse error string
+
 2010-08-09  Sam Steingold  <sds@gnu.org>
 
 	* condition.lisp (clos-style-warning, clos-novice-warning)
